# zephyr-example-filesystem-littlefs

./: CMakeLists.txt  README.rst  littlefs.yaml  prj.conf
GeneratedSource/: cycfg_pins.c  cycfg_pins.h
src/: main.c
